pkg/cmd/kurel/testdata/cilium-networkpolicy-component/app.yaml
apiVersion: launcher.gokure.dev/v1alpha1
kind: Application
metadata:
  name: my-app
  namespace: default
spec:
  components:
    - name: db-allow
      type: cilium-networkpolicy
      properties:
        spec:
          description: database access
          endpointSelector:
            matchLabels:
              role: db
          ingress:
            - fromEndpoints:
                - matchLabels:
                    role: api
              toPorts:
                - ports:
                    - port: "5432"
                      protocol: TCP
          egressDeny:
            - toCIDR:
                - 169.254.169.254/32
    - name: namespace-rules
      type: cilium-networkpolicy
      properties:
        specs:
          - endpointSelector: {}
            egress:
              - toEndpoints:
                  - matchLabels:
                      k8s:io.kubernetes.pod.namespace: kube-system
                      k8s-app: kube-dns
                toPorts:
                  - ports:
                      - port: "53"
                        protocol: UDP
          - endpointSelector:
              matchLabels:
                role: cache
            ingressDeny:
              - fromEntities:
                  - world
